# Massachusetts_Roads_Segmentation

./: .gitignore  pyproject.toml  requirements.txt
assets/logs/: requirements.txt
assets/logs/configs/: config.yaml
assets/logs/src/: dataset.py  metrics.py
configs/: config.yaml
scripts/: download.py  test.py  train.py  val.py
src/: loss.py  model.py  utils.py
